--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,9 @@
     <%= link_to "Reportry", '#', id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   '#' %></li>
-        <li><%= link_to "Help",   '#' %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "ホーム",   '#' %></li>
+        <li><%= link_to "Reportyについて",   '#' %></li>
+        <li><%= link_to "ログイン", '#' %></li>
       </ul>
     </nav>
   </div>
